welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
	if ( (day>0 && day<=5) && vacation==false) { 
		return "7:00"
	}
	if ( ( day==6 || day==0 ) && vacation==false ) {
		return "10:00"
	}
}
